# libcdgbs

./: .gitignore  .gitmodules  CMakeLists.txt  DoubleVB.gbs  Pocket6.gbp  README.md  cgb_format.txt  threeloops.mlp
.github/workflows/: ci.yml
doc/format_specs/: gbp_format.txt  gbs_format.txt  mgbs_format.txt  mlp_format.txt  ngbs_format.txt
examples/: Pocket.cgb  VShape.ngbs  patch-1.mgbs
include/libcdgbs/: Example.hpp  GeomUtil.hpp  LoopFlattener.hpp  MatrixUtil.hpp  Mesh.hpp  Ribbon.hpp  SurfGBS.hpp  TriangleWrapper.hpp
src/: Example.cpp  GeomUtil.cpp  LocalParameterization.cpp  LoopFlattener.cpp  MatrixUtil.cpp  Mesh.cpp  ReadCGB.cpp  ReadGBP.cpp  ReadGBS.cpp  ReadMGBS.cpp  ReadMLP.cpp  ReadNGBS.cpp  SurfGBS.cpp  TriangleWrapper.cpp  WriteOBJ.cpp
tests/: main_test.cpp
